[Update] static page and config hmr [#4]

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset='UTF-8'>
   <title>My Rails App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <!-- Reference the favicon.ico directly from the public directory -->
   <%= favicon_link_tag asset_path('logo.png') %>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
+  <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 <body>
-  <%= yield %>
+  <div class="Wrapper">
+    <%= render 'layouts/header' %>
+    <!-- Main Content Section -->
+    <main class="row">
+      <!-- Sidebar Section (3 columns) -->
+      <aside class="col-12 col-md-3">
+        <%= render 'layouts/sidebar' %>
+      </aside>
+
+      <!-- Content Section (9 columns) -->
+      <section class="col-12 col-md-9">
+        <%= yield %>
+      </section>
+    </main>
+    <%= render 'layouts/footer' %>
+
+    <div class="alert alert-secondary">
+    <%= debug(params) if Rails.env.development? %>
+  </div>
+  </div>
+
+
 </body>
 </html>
