--- a/app/views/user/pages/help.html.erb
+++ b/app/views/user/pages/help.html.erb
@@ -1,3 +1,4 @@
 <!-- app/views/user/pages/help.html.erb -->
-<h1>Welcome to the Help Page!</h1>
-<p>This is the content of the help page.</p>
+<p>
+This is the content of the help page.
+</p>
