--- a/app/views/user/pages/home.html.erb
+++ b/app/views/user/pages/home.html.erb
@@ -1,3 +1,4 @@
 <!-- app/views/user/pages/home.html.erb -->
-<h1>Welcome to the Home Page!</h1>
-<p>This is the content of the home page.</p>
+<p>
+This is the content of the home page.
+</p>
