[Update] session page and fix [#6]

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 <!-- app/views/layouts/_footer.html.erb -->
-<footer class id="footer">
-<section class="footer_top">Footer top</section>
-<section class="footer_bottom">Footer bottom</section>
-</footer>
+  <footer id="footer" class="footer">
+    <div class="copyright">
+      &copy; <%= t("pages.home.footer.copyright") %> <strong><span>BookingApp</span></strong>. <%= t("pages.home.footer.Reserved") %>
+    </div>
+  </footer>
