--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,29 +1,29 @@
 <!-- app/views/layouts/_navbar.html.erb -->
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg" id="navbar">
   <div class="container-fluid">
     <div class="collapse navbar-collapse">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav" id="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Trang chu</a>
+          <%= link_to t("pages.home.nav.home"), root_path, class: "nav-link #{'active' if current_page?(root_path)}" %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <%= link_to t("pages.home.nav.product"), help_path, class: "nav-link #{'active' if current_page?(help_path)}" %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="#"><%= t("pages.home.nav.newsfeed") %></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item dropdown">
+          <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown link
+           <%= t("pages.home.nav.company") %>
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.action") %></a></li>
+            <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.help") %></a></li>
+            <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.service") %></a></li>
           </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><%= t("pages.home.nav.contact") %></a>
         </li>
       </ul>
     </div>
