--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -12,10 +12,7 @@
     <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
   </head>
   <body>
-    <%= render "layouts/header" %>
-    <main id="main" class="main container" style="height: 4000px">
-      <%= yield %>
-    </main>
-    <%= render "layouts/footer" %>
-  </body>
+<body>
+  <%= yield %>
+</body>
 </html>
