--- a/app/javascript/stylesheets/style.scss
+++ b/app/javascript/stylesheets/style.scss
@@ -10,7 +10,7 @@
 .navbar-nav .nav-link {
   text-decoration: none;
   color: #333;
-  font-weight: 600;
+  // font-weight: 600;
   font-family: 'Roboto', sans-serif;
   font-size: 17px;
 }
