--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,10 +7,7 @@
           <%= link_to t("pages.home.nav.home"), root_path, class: "nav-link #{'active' if current_page?(root_path)}" %>
         </li>
         <li class="nav-item">
-          <%= link_to t("pages.home.nav.product"), help_path, class: "nav-link #{'active' if current_page?(help_path)}" %>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><%= t("pages.home.nav.newsfeed") %></a>
+          <%= link_to t("pages.home.nav.help"), help_path, class: "nav-link #{'active' if current_page?(help_path)}" %>
         </li>
           <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -18,8 +15,9 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.action") %></a></li>
-            <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.help") %></a></li>
+            <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.product") %></a></li>
             <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.service") %></a></li>
+            <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.new_feed") %></a></li>
           </ul>
         </li>
         <li class="nav-item">
