--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <!-- app/views/layouts/_footer.html.erb -->
   <footer id="footer" class="footer">
     <div class="copyright">
-      &copy; <%= t("pages.home.footer.copyright") %> <strong><span>BookingApp</span></strong>. <%= t("pages.home.footer.Reserved") %>
+      &copy; <%= t("layouts.footer.copyright") %> <strong><span>BookingApp</span></strong>. <%= t("layouts.footer.reserved") %>
     </div>
   </footer>
