--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>Welcome <%= @email %>!</p>
+<p><%= t('email.welcome_message', email: @email) %></p>
 
-<p>You can confirm your account email through the link below:</p>
+<p><%= t('email.email_confirmation.confirm_email') %></p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to t('email.email_confirmation.confirm_button'), confirmation_url(@resource, confirmation_token: @token) %></p>
