--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,31 @@
-<h2>Change your password</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+<div class="card mb-3">
+  <div class="card-body">
+    <div class="pt-4 pb-2">
+      <h5 class="card-title text-center pb-0 fs-4"><%= t("pages.new_password.title") %></h5>
+      <p class="text-center small"><%= t("pages.new_password.text") %></p>
+    </div>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: "row g-3" }) do |f| %>
+  <%= f.hidden_field :reset_password_token, value: params[:reset_password_token] %>      <div class="col-12">
+        <%= f.label :password, t('activerecord.attributes.user.password'), class: 'form-label', for: 'new-password' %>
+        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', id: 'new-password' %>
+        <% if resource.errors[:password].present? %>
+          <div class="error_message"><%= resource.errors.full_messages_for(:password).first %></div>
+        <% end %>
+      </div>
+      <div class="col-12">
+        <%= f.label :password_confirmation, t('activerecord.attributes.user.password_confirmation'), class: 'form-label', for: 'password_confirmation' %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', id: 'password_confirmation' %>
+        <% if resource.errors[:password_confirmation].present? %>
+          <div class="error_message"><%= resource.errors.full_messages_for(:password_confirmation).first %></div>
+        <% end %>
+      </div>
+      <div class="col-12">
+        <%= f.submit t("components.button.Confirm_password"),  class: "btn btn-primary w-100" %>
+      </div>
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+    <div class="col-12">
+      <hr>
+      <p class="mb-2"><%= t('shared.account_question')%> <%= render "devise/shared/links" %></p>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
