--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,25 +1,20 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to t('pages.registrations.link.log_in'), new_session_path(resource_name) %><br />
+  <%= link_to t('shared.link.log_in'), new_session_path(resource_name) %><br />
 <% end %>
-
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <%= link_to t('shared.link.sign_up'), new_registration_path(resource_name) %><br />
 <% end %>
-
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+  <%= link_to t('shared.link.forgot_password'), new_password_path(resource_name) %><br />
 <% end %>
-
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to t('pages.registrations.link.confirmation_instructions_not_received'), new_confirmation_path(resource_name) %><br />
+  <%= link_to t('shared.link.confirmation_instructions_not_received'), new_confirmation_path(resource_name) %><br />
 <% end %>
-
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
+  <%= link_to t('shared.link.unlock_account'), new_unlock_path(resource_name) %><br />
 <% end %>
-
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
+    <%= button_to t('components.button.log_in_google'), user_google_oauth2_omniauth_authorize_path(provider: 'google_oauth2'), method: :post, data: { turbo: false }, class: "login-with-google-btn w-100" %><br />
   <% end %>
 <% end %>
