--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,24 +4,24 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav" id="navbar-nav">
         <li class="nav-item">
-          <%= link_to t("pages.home.nav.home"), root_path, class: "nav-link #{'active' if current_page?(root_path)}" %>
+          <%= link_to t("layouts.nav.home"), root_path, class: "nav-link #{'active' if current_page?(root_path)}" %>
         </li>
         <li class="nav-item">
-          <%= link_to t("pages.home.nav.help"), help_path, class: "nav-link #{'active' if current_page?(help_path)}" %>
+          <%= link_to t("layouts.nav.help"), help_path, class: "nav-link #{'active' if current_page?(help_path)}" %>
         </li>
           <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-           <%= t("pages.home.nav.company") %>
-          </a>
+            <a class="nav-link dropdown-toggle <%= 'active' if company_active? %>" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <%= t("layouts.nav.company") %>
+            </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.action") %></a></li>
-            <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.product") %></a></li>
-            <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.service") %></a></li>
-            <li><a class="dropdown-item" href="#"><%= t("pages.home.nav.new_feed") %></a></li>
+            <li><%=link_to t("layouts.nav.action"), action_path, class: "nav-link #{'active' if current_page?(action_path)}" %></li>
+            <li><%=link_to t("layouts.nav.product"), product_path, class: "nav-link #{'active' if current_page?(product_path)}" %></li>
+            <li><%=link_to t("layouts.nav.service"), service_path, class: "nav-link #{'active' if current_page?(service_path)}" %></li>
+            <li><%=link_to t("layouts.nav.new_feed"), new_feed_path, class: "nav-link #{'active' if current_page?(new_feed_path)}" %></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><%= t("pages.home.nav.contact") %></a>
+          <%= link_to t("layouts.nav.contact"), contact_path, class: "nav-link #{'active' if current_page?(contact_path)}" %>
         </li>
       </ul>
     </div>
