[Rspec] done testcase application_controller and user_model application_helper #12

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,7 +40,7 @@
                   </a><!-- End Notification Icon -->
                   <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                     <li>
-                      <%= link_to({ locale: 'vi' }, class: 'dropdown-item d-flex align-items-center') do %>
+                      <%= link_to({ locale: 'vi' }, class: 'nav-link d-flex align-items-center') do %>
                         <img src="https://tienichhay.net/uploads/flags/flat/24x24/vn.png" alt="VietNam Flag">
                         <span style="padding-left: 2px"><%= t("layouts.header.language.vn") %></span>
                       <% end %>
@@ -49,7 +49,7 @@
                       <hr class="dropdown-divider">
                     </li>
                     <li>
-                      <%= link_to({ locale: 'ja' }, class: 'dropdown-item d-flex align-items-center') do %>
+                      <%= link_to({ locale: 'ja' }, class: 'nav-link d-flex align-items-center') do %>
                         <img src="https://tienichhay.net/uploads/flags/flat/24x24/jp.png" alt="Japan Flag">
                         <span style="padding-left: 2px"><%= t("layouts.header.language.ja") %></span>
                       <% end %>
@@ -57,7 +57,7 @@
                     <li>
                       <hr class="dropdown-divider">
                     </li>
-                    <%= link_to({ locale: 'en' }, class: 'dropdown-item d-flex align-items-center') do %>
+                    <%= link_to({ locale: 'en' }, class: 'nav-link d-flex align-items-center') do %>
                       <img src="https://tienichhay.net/uploads/flags/flat/24x24/gb.png" alt="English Flag">
                       <span style="padding-left: 2px"><%= t("layouts.header.language.en") %></span>
                     <% end %>
